# simple_event_cpp

./: .clang-format  CMakeLists.txt  Event.h  README.md  main.cpp  tests.cpp
.github/workflows/: cmake-multi-platform.yml
